@@ -65,10 +65,6 @@
     max-width: 100%;
   }
 
-  *:first-child {
-    margin-top: 0;
-  }
-
   code { padding: 0 4px; }
 
   h1 {
